--- a/Chat-Bot/index.html
+++ b/Chat-Bot/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div style="background-color: #f5f5f5; padding: 15px; border-radius: 8px; max-width: 400px; margin: 20px auto; font-family: Arial, sans-serif;">
+    <h3 style="margin-top: 0;">💬 Need help? Try asking:</h3>
+    <ul style="list-style-type: disc; padding-left: 20px; margin-top: 5px;">
+      <li>“Where is your store located?”</li>
+      <li>“How do I return an item?”</li>
+      <li>“Do you have COD available?”</li>
+      <li>“Show me today’s offers.”</li>
+      <li>“How long will delivery take?”</li>
+    </ul>
+    <p style="margin-top: 10px;">Start chatting below 👇</p>
+  </div>
+  
     <section class="chat-window">
         <button class="close">x close</button>
         <div class="chat">
